# MemoriSaas

./: README.md
technical_interview_prep_agent/: README.md  core.py  memory_utils.py  pyproject.toml  requirements.txt
technical_interview_prep_agent/backend/: __init__.py  database.py  main.py
technical_interview_prep_agent/frontend/: index.html  package-lock.json  package.json  vite.config.ts
technical_interview_prep_agent/frontend/src/: App.tsx  styles.css  types.ts
technical_interview_prep_agent/frontend/src/components/: AnalyticsTab.tsx  Dashboard.tsx  HistoryTab.tsx  LandingPage.tsx  MockInterviewTab.tsx  PracticeTab.tsx  ProfileTab.tsx  ProgressTab.tsx  StudyPlanTab.tsx
